# svk-dash

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  ROADMAP.md  current_js.txt  dev.sh  docker-compose.dev.yml  docker-compose.yml  new_js.txt  pyproject.toml  ruff.toml  skarmar-plan.md
alembic/: env.py
alembic/versions/: 0a4ea825ea71_grid_layout_positioner_i_layout_json.py  0dd2cfcbe293_introducera_channel_lager.py  0ef968fa9623_mediafile.py  0f69551c6f1f_move_rotation_transition_to_zone.py  1ca11bebfd6b_remove_screen_aspect_ratio.py  230d563f1adf_screen_transition.py  236b31ab6b7f_init.py  241c956828fd_schedule_json.py  392fa0879372_lägg_till_appsetting.py  412f6a8d58d1_lägg_till_schemafält_på_view.py  4b0c798d4523_add_notification_table.py  5422786eaa8e_add_duration_seconds_to_.py  5527c82cb16e_lägg_till_expected_connections_på_screen.py  5a2902fd6fa7_icscache_composite_pk_source_url.py  6df2b025a3fe_add_view_transition_override_fields.py  818bfdce8784_initial.py  858d348ba2f2_layout_system.py  878ff53f7107_lägg_till_schemafält_på_view.py  952d5d71e3fb_lägg_till_video_capability_på_screen.py  98c9b645c091_mediafolder.py  a85b3bdb5420_add_show_offline_banner_transition_.py  b11165514e37_view_zone_id.py  d98bf7135565_screen_transition_direction.py  daec767ebdd7_lägg_till_brandcolor.py  ea61d47a595a_layout_revisions.py  edf19cd3708f_aspect_ratio_grid_cols_rows.py  f5f235e32daf_add_enabled_to_view_and_.py
app/: auth.py  config.py  database.py  deps.py  dev_seed.py  main.py  models.py  sse.py  templating.py
app/routes/: dev_cal.py  edit.py  (+1 more)
(+62 files in other folders)
